--- a/forgottenpassword.html
+++ b/forgottenpassword.html
@@ -13,29 +13,80 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
+        <!-- modeled after homepage -->
         <style>
+           body {
+                background-color: #3b5998;
+                padding-top: 40px;
+            }
+            #wrapper {
+                margin-top: 0px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: auto;
+                width: 90%;
+                height: 400px;
+                padding-top: 5px;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 5px;
+                background-color: #ffffff;
+                border: 2px solid#8b9dc3;
+                border-radius: 4px;
+            }
+            .button {
+                margin-left: 100px;
+                padding: 5px;
+                padding-bottom: 3px;
+                border-top: 2px solid #8b9dc3;
+                border-left: 2px solid #8b9dc3;
+                border-right: 2px solid #8b9dc3;
+                background-color: white;
+                border-bottom: none;
+                /* font-size: 1.3em; */
+                font-family: "arial";
+                font-weight: bold;
+                text-decoration: none;
+                color: black;
+            }
+            .button:hover {
+                color: black;
+                background-color: #f7f7f7;
+                text-decoration: underline;
+            }
             h2 {
-               color:blue;
-               text-align: center;
-               font: size 40px; 
-               background-color: darkblue;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                margin-left: auto;
+                margin-right: auto;
+                padding: 0px;
+                width: 70%;
+                text-align: center;
+                font-family: "arial";
+                border: 2px solid #3b5998;
+                border-radius: 4px;
+                background-color: #8b9dc3;
             }
             p {
                 color:black;
                 text-align: center;
                 font: size 24px;
-                background-color: gray;
-            }
+                /* background-color: gray; */
+            } 
         </style>
 
     </head>
 <body>
-    <a href="index.html">Home</a>
+  <a href="index.html" class="button">Home</a>
+    <div id="wrapper">
     <h2>Forgotten Password?</h2>
     <p>Enter your email address below and we'll send a link to reset your password!</p>
+    
+    <p>
     <input id="password_reset_email" type="email" placeholder="Email Address"> 
     <button type="button" id="send_password_reset_email">Send Link</button>
-
+    </p>
     <script src="index.js"></script>
+    </div>  
 </body>
 </html>
